--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body
     style="
-      background-image: url('/bg.png');
+      background-image: url('./bg.png');
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
